[project]
name = "pn"
version = "0.1.0"
description = ""
authors = [
    {name = "healer"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sphinx (>=8.2.3,<9.0.0)",
    "recommonmark (>=0.7.1,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false